# fastapi_ordenes_hex

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  auditoria_seguridad.txt  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/application/pricing/: pricing_strategy.py  strategies.py
app/application/services/: order_service.py
app/domain/entities/: order.py
app/domain/repositories/: order_repository.py
app/domain/value_objects/: gender.py  order_status.py
app/infrastructure/: __init__.py
app/infrastructure/adapters/auth/: dependencies.py  jwt_config.py
app/infrastructure/adapters/database/: config.py  models.py  order_repository_impl.py  settings.py
app/infrastructure/adapters/http/: __init__.py
app/infrastructure/adapters/http/routes/: auth_routes.py  order_routes.py
app/infrastructure/adapters/http/schemas/: __init__.py  auth_schemas.py  order_schemas.py
migrations/: env.py
migrations/versions/: 07a2badee146_create_users_table.py  2266e754f8ef_initial_migration.py  d5539ec11ca9_seed_products_from_csv.py
tests/: conftest.py
tests/integration/: test_auth_login.py  test_order_api.py
tests/unit/: test_order_domain.py
