[project]
name = "fastapi-ordenes-hex"
version = "0.1.0"
description = "API Ordenes Arquitectura Hexagonal"
authors = [
    {name = "Jorge A. Camacho Banderas",email = "jorge.camacho.banderas@gmail.com"}
]

requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = ">=26.5.1,<27.0.0"
ruff = ">=0.15.16,<0.16.0"
isort = ">=8.0.1,<9.0.0"
pre-commit = ">=4.6.0,<5.0.0"
pytest = ">=9.0.3,<10.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
httpx2 = ">=2.3.0,<3.0.0"
pip-audit = ">=2.10.0,<3.0.0"
hypothesis = ">=6.100.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: Pruebas unitarias de dominio",
    "integration: Pruebas de integración de adaptadores y API"
]

[tool.ruff]
# Target Python version (Python 3.12)
target-version = "py312"
line-length = 88
[tool.ruff.lint]
select = [
    "E",  # Errores de pycodestyle (PEP 8)
    "W",  # Advertencias de pycodestyle
    "F",  # Pyflakes (errores de sintaxis, variables no usadas, etc.)
    "I",  # Isort (ordenamiento automático de imports)
    "B",  # Flake8-bugbear (patrones de código propensos a bugs)
]
ignore = [
    "E501", # Desactivamos "Line too long" para que no moleste con textos o URLs largas
    "B008", # ¡CRÍTICO PARA FASTAPI! Evita que se queje por usar Depends() en los argumentos
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = ["migrations", ".venv"]
explicit_package_bases = true

[tool.poetry.dependencies]
python = ">=3.14,<4.0"  # Esto significa >=3.12 y <4.0.0
